Fix styling on mobile

--- a/app/assets/stylesheets/til.css.sass
+++ b/app/assets/stylesheets/til.css.sass
@@ -4,13 +4,7 @@
 
 #til
   background: #ddd
-  font: 16pt $helvetica
-
-  .wrapper
-    margin: 0 auto
-    max-width: 960px
-    padding: 0
-    width: 100%
+  font: 13pt $helvetica
 
   a
     color: #066EAC
@@ -18,17 +12,30 @@
 
   h1
     color: black
-    font: 5em 'Give You Glory' cursive
+    font: 2em 'Give You Glory' cursive
     text-align: center
+
+  #sidebar
+    display: none
+
+  #byline
+    color: #333
+    font-size: 0.8em
+    margin: -2.5em 0 2em 3em
+    text-align: center
+    a
+      background-color: #ff8800
+      color: white
+      padding: 0.2em
 
   .thing
     margin-bottom: 4em
 
     .body
-      border-radius: 0.25em
       background: #eee
-      border: 1px #999 solid
-      padding: 1em 2em
+      border-bottom: 1px #999 solid
+      border-top: 1px #999 solid
+      padding: 0.5em
 
       p, pre
         margin: 1em 0
@@ -42,7 +49,6 @@
       code
         margin: 0 0.25em 0 0
         padding: 0.125em 0.25em
-        white-space: nowrap
 
       pre
         padding: 0.25em
@@ -58,6 +64,37 @@
       font-size: golden-ratio(1em, -1)
       margin: golden-ratio(1em, -1)
 
-.pagination
-  margin-bottom: 4em
-  text-align: center
+  .pagination
+    margin-bottom: 4em
+    text-align: center
+
+@media all and (min-width: 961px)
+  #til
+    font: 16pt $helvetica
+
+    .wrapper
+      margin: 0 auto
+      max-width: 960px
+      padding: 0
+      width: 100%
+
+    h1
+      font-size: 3em
+
+    code
+      white-space: nowrap
+
+    .thing
+      margin-bottom: 4em
+
+      .body
+        border-radius: 0.25em
+        border: 1px #999 solid
+
+@media all and (min-width: 1153px)
+  #til
+    #sidebar
+      display: block
+
+    #byline
+      display: none
